[metadata]
name = usm-server
version = 0.1.0
author = Kevin Price
description = A lightweight, ROS-agnostic real-time telemetry router for robots and simulations.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/pricelesskevin44-coder/usm-server
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    websockets
    asyncio
